tests/unary/unary.exp
Error ------------------------------------------------------------ unary.js:8:10

string is not a number.

Error: unary.js:8
  8:   return -y; // error, we don't allow coercion here
              ^^ string [1] is not a number.
  References:
    7: function x1(y: string): number {
                      ^^^^^^ [1]: string

Error ----------------------------------------------------------- unary.js:12:11

string is incompatible with number.

Error: unary.js:12
 12:   return ~y;  // error, we don't allow coercion here
               ^ string [1] is incompatible with number [2].
  References:
   11: function x3(y: string) {
                      ^^^^^^ [1]: string
   12:   return ~y;  // error, we don't allow coercion here
                ^^ [2]: number

Error ------------------------------------------------------------ unary.js:19:2

Cannot cast `-1` to undefined because number is incompatible with undefined.

Error: unary.js:19
 19: (-1: void); // error, number ~> void
      ^^ Cannot cast `-1` to undefined because number [1] is incompatible with undefined [2].
  References:
   19: (-1: void); // error, number ~> void
        ^^ [1]: number
   19: (-1: void); // error, number ~> void
            ^^^^ [2]: undefined

Error ----------------------------------------------------------- update.js:12:5

Cannot perform arithmetic operation because string is not a number.

Error: update.js:12
 12:     y++; // error, we don't allow coercion here
         ^ Cannot perform arithmetic operation because string [1] is not a number.
  References:
   11:   function(y: string) {
                     ^^^^^^ [1]: string

Error ----------------------------------------------------------- update.js:12:5

Cannot assign number to `y` because number is incompatible with string.

Error: update.js:12
 12:     y++; // error, we don't allow coercion here
         ^^^ Cannot assign number to `y` because number [1] is incompatible with string [2].
  References:
   12:     y++; // error, we don't allow coercion here
           ^^^ [1]: number
   11:   function(y: string) {
                     ^^^^^^ [2]: string

Error ----------------------------------------------------------- update.js:14:5

Cannot assign number to `y` because number is incompatible with string.

Error: update.js:14
 14:     y++; // error, but you still can't write a number to a string
         ^^^ Cannot assign number to `y` because number [1] is incompatible with string [2].
  References:
   14:     y++; // error, but you still can't write a number to a string
           ^^^ [1]: number
   11:   function(y: string) {
                     ^^^^^^ [2]: string

Error ----------------------------------------------------------- update.js:18:5

Cannot perform arithmetic operation because string is not a number.

Error: update.js:18
 18:     y--; // error, we don't allow coercion here
         ^ Cannot perform arithmetic operation because string [1] is not a number.
  References:
   17:   function(y: string) {
                     ^^^^^^ [1]: string

Error ----------------------------------------------------------- update.js:18:5

Cannot assign number to `y` because number is incompatible with string.

Error: update.js:18
 18:     y--; // error, we don't allow coercion here
         ^^^ Cannot assign number to `y` because number [1] is incompatible with string [2].
  References:
   18:     y--; // error, we don't allow coercion here
           ^^^ [1]: number
   17:   function(y: string) {
                     ^^^^^^ [2]: string

Error ----------------------------------------------------------- update.js:22:5

Cannot assign number to `y` because number is incompatible with string.

Error: update.js:22
 22:     ++y; // error, we don't allow coercion here
         ^^^ Cannot assign number to `y` because number [1] is incompatible with string [2].
  References:
   22:     ++y; // error, we don't allow coercion here
           ^^^ [1]: number
   21:   function(y: string) {
                     ^^^^^^ [2]: string

Error ----------------------------------------------------------- update.js:22:7

Cannot perform arithmetic operation because string is not a number.

Error: update.js:22
 22:     ++y; // error, we don't allow coercion here
           ^ Cannot perform arithmetic operation because string [1] is not a number.
  References:
   21:   function(y: string) {
                     ^^^^^^ [1]: string

Error ----------------------------------------------------------- update.js:26:5

Cannot assign number to `y` because number is incompatible with string.

Error: update.js:26
 26:     --y; // error, we don't allow coercion here
         ^^^ Cannot assign number to `y` because number [1] is incompatible with string [2].
  References:
   26:     --y; // error, we don't allow coercion here
           ^^^ [1]: number
   25:   function(y: string) {
                     ^^^^^^ [2]: string

Error ----------------------------------------------------------- update.js:26:7

Cannot perform arithmetic operation because string is not a number.

Error: update.js:26
 26:     --y; // error, we don't allow coercion here
           ^ Cannot perform arithmetic operation because string [1] is not a number.
  References:
   25:   function(y: string) {
                     ^^^^^^ [1]: string

Error ----------------------------------------------------------- update.js:31:5

Cannot reassign constant `y`.

Error: update.js:31
 31:     y++; // error, can't update const
         ^ Cannot reassign constant `y` [1].
  References:
   30:     const y = 123;
                 ^ [1]: `y`

Error ----------------------------------------------------------- update.js:32:5

Cannot reassign constant `y`.

Error: update.js:32
 32:     y--; // error, can't update const
         ^ Cannot reassign constant `y` [1].
  References:
   30:     const y = 123;
                 ^ [1]: `y`


Found 14 errors
